--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
 
     <body>
-        
+        <div class='searchContainer'>
+            <input type="text" placeholder="city name or zipcode">
+        </div>
         <script src="./js/main.js"></script>
     </body>
 </html>
