add search button

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     </head>
 
     <body>
-        <div class='searchContainer'>
-            <input type="text" placeholder="city name or zipcode">
+        <div class="searchContainer">
+            <input class="searchbar" type="text" placeholder="city name or zipcode">
+            <button class="searchbar" id="searchbutton">Search</button>
         </div>
         <script src="./js/main.js"></script>
     </body>
