--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
             <input class="searchbar" type="text" placeholder="city name or zipcode">
             <button class="searchbar" id="searchbutton">Search</button>
         </div>
+
+        <div class="weatherContainer">
+            <div class="weatherMain">
+                <h1 id="cityName"></h1>
+
+                <div class="weatherInfo">
+                    <div class="temperature"></div>
+                    <div class="weatherdescription"></div>
+                    <div><img id="weatherIcon"></div>
+                </div>
+
+                <div class="windspeed bottomdetails"></div>
+                <div class="humidity bottomdetails"></div>
+            </div>
+        </div>
         <script src="./js/main.js"></script>
     </body>
 </html>
