add id names to searchbar and button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <body>
         <div class="searchContainer">
-            <input class="searchbar" type="text" placeholder="city name or zipcode">
-            <button class="searchbar" id="searchbutton">Search</button>
+            <input class="searchbar" id="searchField" type="text" placeholder="city name or zipcode">
+            <button class="searchbar" id="searchButton">Search</button>
         </div>
 
         <div class="weatherContainer">
