--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <div class="weatherInfo">
                     <div class="temperature"></div>
-                    <div class="weatherdescription"></div>
+                    <div class="weatherDescription"></div>
                     <div><img id="weatherIcon"></div>
                 </div>
 
