change html to be more semantic

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
 
     <body>
-        <div class="searchContainer">
+        <section class="searchContainer">
             <input class="searchbar" id="searchField" type="text" placeholder="city name or zipcode">
             <button class="searchbar" id="searchButton">Search</button>
-        </div>
+        </section>
 
         <div class="weatherContainer">
             <div class="weatherMain">
