--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <section class="searchContainer">
-            <input class="searchbar" id="searchField" type="text" placeholder="city name or zipcode">
+            <input class="searchbar" id="searchField" type="text" placeholder="City name or Zipcode">
             <button class="searchbar" id="searchButton">Search</button>
         </section>
 
