--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="searchbar" id="searchButton">Search</button>
         </section>
 
-        <div class="weatherContainer">
+        <main class="weatherContainer">
             <div class="weatherMain">
                 <h1 id="cityName"></h1>
 
@@ -27,7 +27,7 @@
                 <div class="windspeed bottomdetails"></div>
                 <div class="humidity bottomdetails"></div>
             </div>
-        </div>
+        </main>
         <script src="./js/main.js"></script>
     </body>
 </html>
