fill in temporary information for styling

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
         <main class="weatherContainer">
             <div class="weatherMain">
-                <h1 id="cityName"></h1>
+                <h1 id="cityName">Baltimore</h1>
 
                 <div class="weatherInfo">
-                    <div class="temperature"></div>
-                    <div class="weatherDescription"></div>
+                    <div class="temperature">96</div>
+                    <div class="weatherDescription">Broken Clouds</div>
                     <div><img id="weatherIcon"></div>
                 </div>
 
-                <div class="windspeed bottomdetails"></div>
-                <div class="humidity bottomdetails"></div>
+                <div class="windspeed bottomdetails">Wind speed is at 7 m/s</div>
+                <div class="humidity bottomdetails">Humidity is at 5%</div>
             </div>
         </main>
         <script src="./js/main.js"></script>
