--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Niramit" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./css/main.css">
         <title>4cast</title>
     </head>
@@ -17,9 +18,9 @@
         <main class="weatherContainer">
             <div class="weatherMain">
                 <h1 id="cityName">Baltimore</h1>
+                <div class="temperature">96</div>
 
                 <div class="weatherInfo">
-                    <div class="temperature">96</div>
                     <div class="weatherDescription">Broken Clouds</div>
                     <div><img id="weatherIcon"></div>
                 </div>
