--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                 <div class="temperature">96</div>
 
                 <div class="weatherInfo">
-                    <div class="weatherDescription">Broken Clouds</div>
-                    <div><img id="weatherIcon"></div>
+                    <div>
+                        <p class="weatherDescription">Broken Clouds</p>
+                        <div><img id="weatherIcon"></div>
+                    </div>
                     <div class="windspeed bottomdetails">Wind speed is at 7 m/s</div>
                 <div class="humidity bottomdetails">Humidity is at 5%</div>
                 </div>
