more semantic markup

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
         <main class="weatherContainer">
             <div class="weatherMain">
-                <h1 id="cityName">Baltimore</h1>
-                <div class="temperature">96</div>
+                <h1 id="cityName"></h1>
+                <p class="temperature"></p>
 
                 <div class="weatherInfo">
-                    <div>
-                        <p class="weatherDescription">Broken Clouds</p>
+                    <div class="weatherDetails">
+                        <p class="weatherDescription"></p>
                         <div><img id="weatherIcon"></div>
                     </div>
-                    <div class="windspeed bottomdetails">Wind speed is at 7 m/s</div>
-                <div class="humidity bottomdetails">Humidity is at 5%</div>
+                    <p class="windspeed bottomdetails"></p>
+                    <p class="humidity bottomdetails"></p>
                 </div>
             </div>
         </main>
