--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <section class="searchContainer">
             <input class="searchbar" id="searchField" type="text" placeholder="City name or Zipcode">
-            <button class="searchbar" id="searchButton">Search</button>
+            <button class="searchbar hvr-forward" id="searchButton">Search</button>
         </section>
 
         <main class="weatherContainer">
