--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
         <link href="https://fonts.googleapis.com/css?family=Niramit" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./css/main.css">
         <title>4cast</title>
