change to only search by city names for now

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <section class="searchContainer">
-            <input class="searchbar" id="searchField" type="text" placeholder="City name or Zipcode">
+            <input class="searchbar" id="searchField" type="text" placeholder="City name...">
             <button class="searchbar hvr-forward" id="searchButton">Search</button>
         </section>
 
